# bible-memory

./: .gitignore  Cargo.toml  Dioxus.toml  README.org  flake.nix
.github/workflows/: check-and-publish.yml
assets/: main.css
src/: main.rs
